Updated compile.bat